<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.FlagColorActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_color_ques"
        android:text="@string/text_color_ques"
        android:textSize="@dimen/sp14"
        android:textColor="@android:color/black"
        android:layout_marginStart="@dimen/sp10"
        android:layout_marginEnd="@dimen/sp10"
        android:layout_marginTop="@dimen/sp10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/label_color_ques"
        android:layout_marginTop="@dimen/sp10"
        android:layout_marginStart="@dimen/sp10">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_color_ques"
            android:id="@+id/checkbox1"
            android:textSize="@dimen/sp12"
            android:textColor="@android:color/black"
            android:text="@string/label_cb_1"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_color_ques"
            android:id="@+id/checkbox2"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"
            android:text="@string/label_cb_2"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_color_ques"
            android:textSize="@dimen/sp12"
            android:id="@+id/checkbox3"
            android:textColor="@android:color/black"
            android:text="@string/label_cb_3"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/label_color_ques"
            android:id="@+id/checkbox4"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"
            android:text="@string/label_cb_4"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_finish"
        android:textSize="@dimen/sp12"
        android:id="@+id/btnNext"
        android:layout_marginStart="@dimen/sp10"
        android:layout_marginEnd="@dimen/sp10"
        android:layout_marginBottom="@dimen/sp10"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>