<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/sp10"
    android:layout_marginEnd="@dimen/sp10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/sp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_game"
            android:textStyle="bold"
            android:textSize="@dimen/sp12"
            android:id="@+id/labelGame"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvGameId"
            android:text="@string/text_not_available"
            android:textStyle="bold"
            android:textSize="@dimen/sp12"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/sp5" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSemiColon"
            android:text=":"
            android:textSize="@dimen/sp12"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/sp5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateTime"
            android:textColor="@android:color/black"
            android:text="@string/text_not_available"
            android:layout_marginStart="@dimen/sp5"
            android:textSize="@dimen/sp12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/sp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_name"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginStart="@dimen/sp5"
            android:id="@+id/tvUserName"
            android:text="@string/text_not_available"
            android:textSize="@dimen/sp12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sp10"
        android:layout_marginTop="@dimen/sp10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/text_cricket_ques"
            android:textSize="@dimen/sp12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFavCricketer"
            android:text="@string/text_not_available"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sp10"
            android:text="@string/text_color_ques"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFavColor"
            android:text="@string/text_not_available"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp12"/>

    </LinearLayout>


</LinearLayout>